# arger

./: README.md  meson.build
include/: arger.hpp
tests/: get_arg.cpp  help.cpp  required.cpp
